# waymonad-config

./: .gitmodules  waymonad-config.cabal
my/: Main.hs
